# xviewer

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-2.18  ChangeLog-2.6  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt
data/: Makefile.am  Makefile.in  eog-image-properties-dialog.ui  eog-multiple-save-as-dialog.ui  eog-preferences-dialog.ui  eog-ui.xml  eog.appdata.xml.in  eog.convert  eog.css  eog.desktop.in.in  eog.pc.in  meson.build  org.gnome.eog.gschema.xml.in  org.gnome.xviewer.gschema.xml.in  org.x.viewer.gschema.xml  org.x.viewer.gschema.xml.in  xviewer-app-menu.xml  xviewer-preferences-dialog.ui  xviewer-toolbar.xml  xviewer-ui.xml  xviewer.appdata.xml.in  xviewer.convert  xviewer.desktop.in.in  xviewer.pc.in
data/icons/: Makefile.in  meson.build
data/pixmaps/: Makefile.in
doc/reference/: Makefile.am  Makefile.in  eog-docs.xml  eog-docs.xml.in  eog-sections.txt  meson.build  xviewer-docs.xml.in  xviewer-sections.txt
help/: ChangeLog  LINGUAS  Makefile.am  Makefile.in  meson.build
help/C/: bug-filing.page  commandline.page  copy-paste.page  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  slideshow.page  toolbar.page  translate.page  view.page  zoom.page
help/ar/: ar.po  bug-filing.page  commandline.page  copy-paste.page  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  legal.xml  license.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  slideshow.page  toolbar.page  translate.page  view.page  zoom.page
help/ca/: bug-filing.page  ca.po  commandline.page  copy-paste.page  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  license.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  slideshow.page  toolbar.page  translate.page  view.page  zoom.page
help/cs/: bug-filing.page  commandline.page  copy-paste.page  cs.po  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  legal.xml  license.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  slideshow.page  toolbar.page  translate.page  view.page  zoom.page
help/da/: bug-filing.page  commandline.page  copy-paste.page  da.po  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  license.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  slideshow.page  toolbar.page  translate.page  view.page  zoom.page
help/de/: bug-filing.page  commandline.page  copy-paste.page  de.po  default.page  desktop-background.page  develop.page  documentation.page  edit.page  flip-rotate.page  format-change.page  formats-save.page  formats-view.page  index.page  introduction.page  legal.xml  license.page  open.page  plugin-exif-digital.page  plugin-fullscreen-background.page  plugin-fullscreen-double-click.page  plugin-picasa.page  plugin-python-console.page  plugin-send-by-mail.page  plugin-slideshow-shuffle.page  plugin-zoom-width.page  plugins.page  preferences.page  print.page  rename-multiple.page  shortcuts.page  toolbar.page  (+4 more)
jpegutils/: Makefile.am  Makefile.in  jpegint.h  meson.build  transupp-6b.c  transupp-6b.h  transupp-8a.c  transupp.h
plugins/: ChangeLog  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  eog-application-activatable.c  eog-application-activatable.h  eog-application-internal.h  eog-application.c  eog-application.h  eog-clipboard-handler.c  eog-clipboard-handler.h  eog-close-confirmation-dialog.c  eog-close-confirmation-dialog.h  eog-config-keys.h  eog-debug.c  eog-debug.h  eog-enum-types.h.template  eog-enums.h  eog-error-message-area.c  eog-error-message-area.h  eog-exif-util.c  eog-exif-util.h  eog-file-chooser.c  eog-file-chooser.h  eog-image-jpeg.c  eog-image-jpeg.h  eog-image-private.h  eog-image-save-info.c  eog-image-save-info.h  eog-image.c  eog-image.h  eog-job-scheduler.c  eog-job-scheduler.h  eog-jobs.c  eog-jobs.h  eog-list-store.c  eog-list-store.h  eog-metadata-details.c  eog-metadata-details.h  eog-metadata-reader-jpg.c  eog-metadata-reader-jpg.h  eog-metadata-reader-png.c  (+104 more)
(+1121 files in other folders)
