@YELP_HELP_RULES@

HELP_ID = xviewer

HELP_MEDIA = \
	figures/xviewer-logo.png			\
	figures/xviewer-toolbar-editor.png		\
	figures/xviewer-trail.png			\
	figures/image-view-prefs.png		\
	figures/multiple-convert.png		\
	figures/multiple-rename-count.png	\
	figures/plugins-all.png			\
	figures/plugin-send-by-mail.png		\
	figures/prefs-plugins-date.png		\
	figures/prefs-plugins-fullscreen.png	\
	figures/prefs-plugins.png		\
	figures/slideshow-prefs.png

HELP_FILES = \
	commandline.page			\
	copy-paste.page				\
	default.page				\
	desktop-background.page			\
	edit.page				\
	flip-rotate.page			\
	format-change.page			\
	formats-save.page			\
	formats-view.page			\
	index.page				\
	introduction.page			\
	legal.xml				\
	license.page				\
	open.page				\
	plugin-exif-digital.page		\
	plugin-fullscreen-background.page	\
	plugin-fullscreen-double-click.page	\
	plugin-picasa.page			\
	plugin-python-console.page		\
	plugin-send-by-mail.page		\
	plugin-slideshow-shuffle.page		\
	plugins.page				\
	plugin-zoom-width.page			\
	preferences.page			\
	print.page				\
	rename-multiple.page			\
	shortcuts.page				\
	slideshow.page				\
	toolbar.page				\
	view.page				\
	zoom.page

HELP_LINGUAS = ar ca cs da de el en_GB es eu fi fr gl hu it ja ko lv oc pa pl pt_BR ro ru sl sv te th uk zh_CN zh_TW

-include $(top_srcdir)/git.mk
